Migrate to S3 maven repo. Add errorprone